# ChangeLog for sys-kernel/linux-docs
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/linux-docs/ChangeLog,v 1.30 2012/01/18 14:58:07 mpagano Exp $

*linux-docs-3.2.1 (18 Jan 2012)

  18 Jan 2012; Michael Pagano <mpagano@gentoo.org> -linux-docs-2.6.35.2.ebuild,
  -linux-docs-2.6.35.7.ebuild, +linux-docs-3.2.1.ebuild:
  Add new version and remove old.

*linux-docs-3.0 (11 Dec 2011)

  11 Dec 2011; Michael Pagano <mpagano@gentoo.org> +linux-docs-3.0.ebuild:
  Add 3.0 documentation

  24 Nov 2011; Michael Pagano <mpagano@gentoo.org> -linux-docs-2.6.36.ebuild,
  linux-docs-3.1.ebuild:
  Fix SRC_URI and drop old

*linux-docs-3.1 (28 Oct 2011)

  28 Oct 2011; Michael Pagano <mpagano@gentoo.org> +linux-docs-3.1.ebuild:
  Version bump

*linux-docs-2.6.36 (21 Nov 2010)
*linux-docs-2.6.35.2 (21 Nov 2010)

  21 Nov 2010; Michael Pagano <mpagano@gentoo.org>
  -linux-docs-2.6.25.2.ebuild, +linux-docs-2.6.35.2.ebuild,
  +linux-docs-2.6.36.ebuild:
  Add docs for 2.6.36

*linux-docs-2.6.35.7 (04 Oct 2010)
*linux-docs-2.6.32.23 (04 Oct 2010)

  04 Oct 2010; Mike Pagano <mpagano@gentoo.org> -linux-docs-2.6.26.4.ebuild,
  -linux-docs-2.6.31.ebuild, +linux-docs-2.6.32.23.ebuild,
  +linux-docs-2.6.35.7.ebuild:
  Version bumps and old version cleanups

*linux-docs-2.6.31 (18 Sep 2009)

  18 Sep 2009; Mike Pagano <mpagano@gentoo.org> -linux-docs-2.6.28.7.ebuild,
  +linux-docs-2.6.31.ebuild:
  Version bump and old version cleanup

*linux-docs-2.6.28.7 (24 Feb 2009)

  24 Feb 2009; Mike Pagano <mpagano@gentoo.org> -linux-docs-2.6.23.1.ebuild,
  -linux-docs-2.6.24.2.ebuild, +linux-docs-2.6.28.7.ebuild:
  Version bump and old version cleanup

  26 Nov 2008; Mike Pagano <mpagano@gentoo.org> -linux-docs-2.4.32.ebuild,
  -linux-docs-2.4.35.3.ebuild, linux-docs-2.6.16.ebuild,
  linux-docs-2.6.23.1.ebuild, linux-docs-2.6.24.2.ebuild,
  linux-docs-2.6.25.2.ebuild: