@@ -7,18 +7,20 @@ DIST linux-2.6.32.23.tar.bz2 64429572 RMD160 500cf101e64e41c5e4e7294565d55ad6e65
 DIST linux-3.0.tar.bz2 76753134 RMD160 e20c9564ec0c8128e28a4c038986d4d93bbe34bb SHA1 45b64bffc860f70ab7956da4493c488010714650 SHA256 64b0228b54ce39b0b2df086109a7b737cde58e3df4f779506ddcaccee90356a0
 DIST linux-3.1.tar.bz2 77190238 RMD160 f9a3ce57b9f20a1402ef340792d3c223140ce1d2 SHA1 ac792701561b1cd4279302b8bb8f474731762ad1 SHA256 2573d2378c754b0c602b57586e9311e5b38c5d1e6c137f02873833633a4b9359
 DIST linux-3.2.1.tar.bz2 78111701 RMD160 98ef5a9104d692b8bfdd711ffc931995583c6b9b SHA1 9d278e8d11f368aaca97ed708e2e315b2127dc15 SHA256 7e2b1e3d93883dd3e469a76598196a3836a0182d93bf073fd68bae1f4cfbf44e
+DIST linux-3.4.1.tar.bz2 80208023 RMD160 2e4b4eaa3e5ee3159c4be2cc2bf5e2f6718fd0cc SHA1 152828418bbea9d8cc2a08f501e9cee3c6d48d03 SHA256 2c298fadca3ccb32c08501281133a5dbc8568cb55b9ee5502e9709d6182daf3e
 EBUILD linux-docs-2.6.16.ebuild 1460 RMD160 c862a9f8622aded535abcd7ea3972ec2ee16a6fe SHA1 fa3e3218e231493e596c6b8f0033bb4d5b5368ff SHA256 055cbe77ac4c3231877dc5b7fe0dc01b811e468d6d377fef404bc037c7027282
 EBUILD linux-docs-2.6.27.7.ebuild 1472 RMD160 d9b46a505de02b9441362c9e09b58d22e1226a1a SHA1 a88ef6d9a8aaeb244fdbbc01a033c675636c99a8 SHA256 67e7e14cbb386cface5016094e452282ecc44cd76d3587a63497ac97f75a43d4
 EBUILD linux-docs-2.6.32.23.ebuild 1473 RMD160 7896611a2509e0cd9117654706cf14dbf7577b12 SHA1 69ffd18147bf5d0530231c38e3f0f7a740d86348 SHA256 27175ac867b5a8f7b1104145841c08179d93d6dd0a793465cf900d49042a058f
 EBUILD linux-docs-3.0.ebuild 1467 RMD160 113f5c01f9c9b6956bbaac228e7a794f1742c893 SHA1 b8fedf193b248b9dc68142fce7d46d329ad0f5e5 SHA256 7cc3a4014a0ae3b8ef486dff26ddf08ca44ea78c444e92bc9bbe74f3540ab8f5
 EBUILD linux-docs-3.1.ebuild 1467 RMD160 425979f549557e4092224369524b43d237b5b6be SHA1 b52f649c9cd1e0daf6b7926714ad87c944a5c2c7 SHA256 ee8d613cd19ab52f22e3979e7fd7c7495f205b79c5721d767ce9b720cc88a507
 EBUILD linux-docs-3.2.1.ebuild 1464 RMD160 27e8a8173e30db0691994727ad4a8e23b5c29c32 SHA1 60cdc12655ceb89b043da46f550cda4da62322ba SHA256 98611963eb5e7c3fa90537756dbffbeb1778e69c973c2d31eae72a3f59c82b93
-MISC ChangeLog 4998 RMD160 450fa05b0eeb21b11f5742b096a1261b1a098793 SHA1 ca322387d747bcab1cded7f08dfd571b1b42dff7 SHA256 b646498cbc77acd011be2eb52279a6c2cdd79efcfeb3519b8631019f1cd295aa
+EBUILD linux-docs-3.4.1.ebuild 1464 RMD160 e01c67d4a6f7ae01f5ea974bcac3bbaad77e691d SHA1 8f5920e1d9fd9584395dcaf99eeeda9623a69940 SHA256 08db57f4e4a3c6b4659d528ea94dd15b8577f06aa133bf771d6518766a0f1195
+MISC ChangeLog 5124 RMD160 00ae2ff73c45404ff0e24c203b1a291ead0cd319 SHA1 518202b9c71d6f14bb8634a0796e8f4719fe59fc SHA256 270e134ad979e0dbfe21ae727f3d0361227c5feae79bf38ca8ba487acecf2d04
 MISC metadata.xml 299 RMD160 dc600bbbb0e020ffd59c05c3db5af421c14fbadf SHA1 93999ab1c937b64ed6a7f220f5814db7eaa342fc SHA256 736556faadf70505403eaa445a43a5a8bf3d0b58d390d289f7bc3c4cf50abb09
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk8W3gUACgkQPDPGULV25OOevQCdFVl8Nubu6D+yJr56x2tCrlzc
-t7cAni6zEmR1K6uoMwKqnpQX+O6mha/q
-=kuzk
+iEYEAREIAAYFAk/NQhoACgkQPDPGULV25OMqEwCeMJ7IvbMW+Hqb9L40OXhFv77T
+WegAoLDjn4aVKqVrYTUGApBysc85XiAt
+=ABgk
 -----END PGP SIGNATURE-----
